--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   <div class="container">
     <div class="row align-items-center">
 <!-- Image Column -->
-<div class="col-lg-5 position-relative text-center mb-4 mb-lg-0">
+<div class="col-lg-5 position-relative text-center mb-4 mb-lg-0 d-none d-md-block">
   <div class="main-img overflow-hidden mx-auto" style="width: 100%; max-width: 400px; height: 600px; border-radius: 60% / 40%;">
     <img src="assets/images/Flyboarding.jpg" class="img-fluid w-100 h-100 object-fit-cover" alt="Main Travel Image">
   </div>
@@ -196,13 +196,14 @@
           <li class="mb-2"><span class="text-orange me-2" style="color: #0E8281;"><i class="fi fi-sc-sparkles"></i></span> Expert Support & Hassle-Free Booking</li>
         </ul>
 
-        <div class="d-flex align-items-center flex-wrap gap-3">
-          <a href="packages.html" class="btn btn-orange px-4 py-2 rounded-pill py-3">Our Packages →</a>
-          <span>Or</span>
-          <a href="https://wa.me/971542550407" class="btn btn-outline-orange px-4 py-3 rounded-pill d-flex align-items-center gap-2">
+        <div class="d-flex flex-column flex-md-row align-items-center gap-3 text-center text-md-start">
+          <a href="packages.html" class="btn btn-orange px-4 py-3 rounded-pill w-100 w-md-auto">Our Packages →</a>
+          <span class="fw-semibold d-none d-md-block">Or</span>
+          <a href="https://wa.me/971542550407" class="btn btn-outline-orange px-4 py-3 rounded-pill d-flex justify-content-center align-items-center gap-2 w-100 w-md-auto">
             <i class="fi fi-sr-phone-call"></i>+971 54 255 0407
           </a>
         </div>
+
       </div>
     </div>
   </div>
